<resources>
    <string name="app_name">Dotify</string>
    <string name="album_cover">Album Cover</string>
    <string name="album_cover_small">Album Cover (Small)</string>
    <string name="btn_prev">Previous Button</string>
    <string name="btn_play">Play Button</string>
    <string name="btn_next">Next Button</string>
    <string name="user_name_hint">username</string>
    <string name="apply">apply</string>
    <plurals name="num_plays">
        <item quantity="one">%1$d play</item>
        <item quantity="other">%1$d plays</item>
    </plurals>
    <string name="song_title">Title</string>
    <string name="artist_name">Artist</string>
    <string name="btn_shuffle">Shuffle</string>
    <string name="empty_error_msg">%1$s cannot be empty.</string>
    <string name="song_description">%1$s - %2$s</string>

    <string name="age">Age: %1$d</string>
    <string name="email">Email: %1$s</string>
    <string name="joined_date">Joined: %1$s</string>
    <string name="height">Height: %1$s</string>

    <string name="creator">Creator: %1$s</string>
    <string name="version">Version: %1$s</string>
    <string name="website">Website: %1$s</string>

    <string name="kvPair">%1$s: %2$s</string>
    <string name="settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile_picture">profile picture</string>
    <string name="profile">profile</string>
    <string name="profile_statistics">profile statistics</string>
    <string name="about">about</string>
    <string name="auto_refresh">Auto Refresh</string>
    <string name="new_music">New Uploaded Music</string>
    <string name="new_music_channel">Channel for notifying new uploaded music</string>
</resources>