<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlayerActivity">

    <ImageButton
        android:id="@+id/btnAlbum"
        android:layout_width="@dimen/constraint_spacing"
        android:layout_height="@dimen/constraint_spacing"
        android:layout_marginHorizontal="@dimen/default_spacing"
        android:layout_marginBottom="@dimen/default_spacing"
        android:background="@android:color/transparent"
        android:contentDescription="@string/album_cover"
        android:scaleType="centerCrop"
        android:foreground="?selectableItemBackgroundBorderless"
        app:layout_constraintBottom_toTopOf="@id/tvTitle"
        app:layout_constraintTop_toBottomOf="@id/btnSettings"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/strangers_cover_art" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/normal_size"
        app:layout_constraintBottom_toTopOf="@id/tvArtist"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnAlbum"
        tools:text="Title"/>

    <TextView
        android:id="@+id/tvArtist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="1"
        android:textSize="@dimen/small_size"
        app:layout_constraintBottom_toTopOf="@id/tvNumPlays"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        tools:text="@string/artist_name"/>

    <TextView
        android:id="@+id/tvNumPlays"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_spacing"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvArtist" />

    <ImageButton
        android:id="@+id/btnPlay"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:background="@android:color/transparent"
        android:foreground="?android:attr/selectableItemBackgroundBorderless"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnNext"
        app:layout_constraintStart_toEndOf="@id/btnPrev"
        app:layout_constraintTop_toBottomOf="@id/tvNumPlays"
        android:contentDescription="@string/btn_play"
        app:srcCompat="@drawable/ic_play" />

    <ImageButton
        android:id="@+id/btnPrev"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/constraint_spacing"
        android:background="@android:color/transparent"
        android:foreground="?android:attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/btn_prev"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@id/btnPlay"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvNumPlays"
        app:srcCompat="@drawable/ic_previous" />

    <ImageButton
        android:id="@+id/btnNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:foreground="?android:attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/btn_next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnPlay"
        app:layout_constraintTop_toBottomOf="@+id/tvNumPlays"
        app:srcCompat="@drawable/ic_next" />

    <Button
        android:id="@+id/btnSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        app:layout_constraintBottom_toTopOf="@id/btnAlbum"
        app:layout_constraintEnd_toEndOf="@id/btnAlbum"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>