<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="@dimen/default_spacing"
    tools:context=".MainActivity"
    android:orientation="vertical">
    
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal"
        >
        <TextView
            android:id="@+id/tvUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start|center"
            android:text="@string/default_name"
            android:textSize="@dimen/small_size"/>

        <EditText
            android:id="@+id/etUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center"
            android:text="@string/default_name"
            android:textSize="@dimen/small_size"
            android:visibility="invisible"
            android:inputType="text"
            android:importantForAutofill="no"
            android:hint="@string/user_name_hint"
        />
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="end">
        <Button
            android:id="@+id/btnChangeUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_user" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">
        <ImageButton
            android:id="@+id/btnAlbum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/strangers_cover_art"
            android:background="@android:color/transparent"
            android:foreground="?android:attr/selectableItemBackgroundBorderless"
            android:scaleType="center"
            android:layout_marginVertical="@dimen/default_spacing"
            android:contentDescription="@string/album_cover"

            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        >
        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/song_title"
            android:textSize="@dimen/normal_size"/>
        <TextView
            android:id="@+id/tvArtist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:ellipsize="end"
            android:text="@string/artist_name"
            android:textSize="@dimen/small_size"/>
        <TextView
            android:id="@+id/tvNumPlays"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/small_size"
        />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:baselineAligned="false"
            >
            <LinearLayout
                android:layout_width="@dimen/constraint_spacing"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal">
                <ImageButton
                    android:id="@+id/btnPrev"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:foreground="?android:attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/btn_prev"
                    app:srcCompat="@drawable/ic_previous" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="@dimen/constraint_spacing"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal">
                <ImageButton
                    android:id="@+id/btnPlay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:background="@android:color/transparent"
                    android:foreground="?android:attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/btn_play"
                    app:srcCompat="@drawable/ic_play" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal">
                <ImageButton
                    android:id="@+id/btnNext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:foreground="?android:attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/btn_next"
                    android:layout_gravity="end"
                    app:srcCompat="@drawable/ic_next" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</androidx.appcompat.widget.LinearLayoutCompat>